@@ -1,3 +1,9 @@
+2003-07-07  David Malcolm <david@davemalcolm.demon.co.uk>
+
+	* cong-dispspec.c, cong-eel.c, cong-eel.h
+
+	Improvements to DTD->Dispspec conversion
+
 2003-07-06  David Malcolm <david@davemalcolm.demon.co.uk>
 
 	* cong-dispspec.c, plugin-dtd.c
